RecursiveStuff/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-oracle/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.11.jar:/usr/share/bluej/hamcrest-core-1.3.jar:/usr/share/bluej/lang-stride.jar:/usr/share/bluej/userlib/pi4j-core.jar:/usr/share/bluej/userlib/pi4j-device.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/usr/share/bluej/userlib/pi4j-service.jar:/home/cmis/APCS-sienna2169-cmis/RecursiveStuff
-d
/home/cmis/APCS-sienna2169-cmis/RecursiveStuff/doc
-encoding
UTF-8
-charset
UTF-8
/home/cmis/APCS-sienna2169-cmis/RecursiveStuff/Recursive.java
<---- end of javadoc command ---->
Loading source file /home/cmis/APCS-sienna2169-cmis/RecursiveStuff/Recursive.java...
/home/cmis/APCS-sienna2169-cmis/RecursiveStuff/Recursive.java:83: error: illegal start of type
    else {return 0;}
    ^
/home/cmis/APCS-sienna2169-cmis/RecursiveStuff/Recursive.java:83: error: ';' expected
    else {return 0;}
        ^
/home/cmis/APCS-sienna2169-cmis/RecursiveStuff/Recursive.java:83: error: illegal start of type
    else {return 0;}
          ^
/home/cmis/APCS-sienna2169-cmis/RecursiveStuff/Recursive.java:83: error: <identifier> expected
    else {return 0;}
                ^
/home/cmis/APCS-sienna2169-cmis/RecursiveStuff/Recursive.java:84: error: class, interface, or enum expected
    }
    ^
5 errors
